apps/base/forward-auth/deployment.yaml
#
# Reference:
# https://github.com/thomseddon/traefik-forward-auth
# https://github.com/thomseddon/traefik-forward-auth/issues/83
#

apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: treafik-forward-auth
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: traefik-forward-auth
  type: ClusterIP
  ports:
    - name: auth-http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: traefik-forward-auth
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: traefik-forward-auth
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik-forward-auth
          image: docker.io/thomseddon/traefik-forward-auth:2.2.0 # {"$imagepolicy": "kube-system:traefik-forward-auth"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4181
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 4181
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: 250m
              memory: 100Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: secrets
              readOnly: true
              mountPath: /secrets
      volumes:
        - name: config
          configMap:
            name: traefik-forward-auth
        - name: secrets
          secret:
            secretName: traefik-forward-auth
