apps/base/forward-auth/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: traefik-forward-auth
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.powell.place`)
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
      services:
        - name: traefik-forward-auth
          port: auth-http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app.kubernetes.io/component: middleware
    app.kubernetes.io/name: traefik-forward-auth
spec:
  forwardAuth:
    address: http://traefik-forward-auth/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
#
# Usage Example
#
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: example-forward-auth-https
#   namespace: default
#   labels:
#     app: traefik
# spec:
#   entryPoints:
#     - https
#   routes:
#   - match: Host(`example.powell.place`)
#     kind: Rule
#     services:
#     - name: traefik-forward-auth
